<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?attr/colorPrimary"
	android:orientation="vertical">

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="?android:actionBarSize"
		android:background="?attr/selectableItemBackground"
		android:foreground="?attr/selectableItemBackground"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:clickable="true"
		android:id="@+id/cv_search_start_box"
		app:cardCornerRadius="4dp"
		app:cardElevation="2dp"
		android:layout_centerInParent="true"
		android:transitionName="sharedView">

		<RelativeLayout
			android:layout_height="match_parent"
			android:layout_width="match_parent">

			<ImageView
				android:id="@+id/iv_search_start_box_icon"
				android:layout_marginLeft="16dp"
				android:layout_height="24dp"
				android:layout_width="24dp"
				app:srcCompat="@drawable/ic_search"
				android:layout_centerVertical="true"/>

			<TextView
				android:id="@+id/tv_search_start_box_text"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="18sp"
				android:textColor="?attr/colorTextStandard"
				android:alpha="0.54"
				android:text="@string/search_activity_search_card_text"
				android:layout_centerVertical="true"
				android:layout_marginLeft="72dp"/>

		</RelativeLayout>

	</android.support.v7.widget.CardView>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="vertical"
		android:layout_above="@id/cv_search_start_box"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="16dp">
		
		<vcoty.vainglory.go.widget.CircleTextImageView
			android:id="@+id/circle_text_iv_search_icon"
			android:layout_height="48dp"
			android:layout_width="48dp"
			android:layout_centerVertical="true"
			android:layout_marginBottom="5dp"
			app:citv_text_size="18sp"
			app:citv_text_text="VGO"
			app:citv_fill_color="?attr/colorAccent"
			app:citv_text_color="?attr/colorTextWhite"
			app:citv_border_width="0dp"/>
		
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/search_activity_text1"
			android:textSize="34sp"
			android:textColor="?attr/colorSearchActTitle"
			android:layout_marginBottom="5dp"
			android:textStyle="bold"/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/search_activity_text2"
			android:textSize="22sp"
			android:textColor="?attr/colorSearchActSubtitle"/>

	</LinearLayout>

	<Button
		android:id="@+id/btn_search_setting"
		android:text="@string/search_activity_setting"
		android:textColor="?attr/colorTextSearchActAccent"
		style="@style/Widget.AppCompat.Button.Borderless"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/cv_search_start_box"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="16dp"/>

</RelativeLayout>


